# CardioSignalLab

./: .gitignore  CLAUDE.md  CardioSignalLab.bat  LICENSE  README.md  environment.yml  main.py  pyproject.toml  requirements.txt  test_pyqtgraph_minimal.py  test_simple.py
.github/workflows/: tests.yml
docs/: ARCHITECTURE.md  PROJECT_STATUS.md  SETUP.md
docs/prd/: notes.txt  prd-mvp-core-application.md
docs/research/: error-handling-patterns.md
docs/tasks/: final-prd-review.md  manual-testing-checklist.md  review-task-6-export.md  tasks-prd-mvp-core-application.md
src/cardio_signal_lab/: __init__.py  app.py  signals.py
src/cardio_signal_lab/config/: __init__.py  keybindings.py  settings.py
src/cardio_signal_lab/core/: __init__.py  data_models.py  exporter.py  file_loader.py  importers.py  session.py
src/cardio_signal_lab/gui/: __init__.py  analysis_plots.py  bad_segment_overlay.py  derived_panel.py  event_editor_dialog.py  event_overlay.py  imf_selection_dialog.py  lod_renderer.py  log_panel.py  main_window.py  multi_signal_view.py  peak_overlay.py  plot_widget.py  processing_panel.py  signal_type_view.py  single_channel_view.py  single_signal_view.py  status_bar.py
src/cardio_signal_lab/processing/: __init__.py  bad_segment_detection.py  derived.py  eemd.py  filters.py  interval_analysis.py  peak_correction.py  peak_detection.py  pipeline.py  worker.py
tests/: __init__.py  internal_adc_a13_processing.json  internal_adc_a13_rr_intervals.csv  internal_adc_a13_rr_intervals_processing.json  test_data_models.py  test_eemd.py  test_exporter.py  test_file_loader.py  test_filters.py  test_integration.py  test_lod_renderer.py  test_log_panel.py  test_peak_correction.py  test_peak_detection.py  test_pipeline.py  test_session.py
tests/pyqtgraph_debug/: test.py
